ecmascript/parser/tests/test262-error-references/fail/1ad1143aa95cf8bf.js.stderr
error: Not an utf-8 character: 55296
 --> $DIR/tests/test262-parser/fail/1ad1143aa95cf8bf.js:1:1
  |
1 | \uD800x
  | ^^^^^^

